fix mobile styling (temp) for tools in resemblance to v1 fix 12p 500 fs internal error removed display of breadcrumbs on mobile

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -626,7 +626,8 @@ svg {
 .breadcrumb { display: flex; flex-wrap: wrap; padding: 0; margin: 0; list-style: none; }
 .breadcrumb-item + .breadcrumb-item::before { content: none; }
 .breadcrumb-title { font-size: 1.25rem; font-weight: 500; padding-right: 0.75rem; border-right: 2px solid var(--color-heading); opacity: 0.9; color: var(--color-heading); }
-.page-breadcrumb { display: flex; align-items: center; }
+.page-breadcrumb { display: none; align-items: center; }
+@media (min-width: 1024px) { .page-breadcrumb { display: flex; } }
 .page-breadcrumb .breadcrumb-title + div { padding-left: 0.75rem; }
 
 /* Misc */
